--- a/Views/Biodata/CreateBiodata.cshtml
+++ b/Views/Biodata/CreateBiodata.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="CreateBiodata">
+        <form asp-action="CreateBiodata" asp-controller="Biodata" method="post" role="form">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="StaffId" class="control-label"></label>
