--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Biodata" asp-action="CreateBiodata">Create Biodata</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Biodata" asp-action="existedBiodata">View Biodata</a>
+                        </li>
                     </ul>
                 </div>
             </div>
