--- a/Views/Biodata/CreateBiodata.cshtml
+++ b/Views/Biodata/CreateBiodata.cshtml
@@ -5,10 +5,18 @@
 }
 
 <h1>CreateBiodata</h1>
+<head>
+    <link href="/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
+    <script src="/lib/jquery/jquery.js"></script>
+    <script src="/lib/bootstrap/js/bootstrap.js"></script>
+    @*<link href="~/Content/site.css" rel="stylesheet" />*@
 
+    @*<script type="text/javascript" src="/lib/jquery/dist/jquery.min.js"></script>
+        <script type="text/javascript" src="/lib/jquery/dist/jquery.js"></script>*@
+</head>
 <h4>BioDataViewModel</h4>
 <hr />
-<div class="row">
+<div class="row" style="border-block-color:red">
     <div class="col-md-4">
         <form asp-action="CreateBiodata" asp-controller="Biodata" method="post" role="form">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -27,16 +35,26 @@
                 <input asp-for="LastName" class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Address" class="control-label"></label>
-                <input asp-for="Address" class="form-control" />
-                <span asp-validation-for="Address" class="text-danger"></span>
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <label asp-for="Address" class="control-label"></label>
+                        <textarea asp-for="Address" class="form-control" data-val-maxlength-max="10"></textarea>
+                        <span asp-validation-for="Address" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <label asp-for="DOB" class="control-label"></label>
+                        <input type="date" id="DOB" name="DOB" class="form-control" asp-for="DOB" />
+                        <span asp-validation-for="DOB" class="text-danger"></span>
+                    </div>
+                </div>
+
+
             </div>
-            <div class="form-group">
-                <label asp-for="DOB" class="control-label"></label>
-                <input asp-for="DOB" class="form-control" />
-                <span asp-validation-for="DOB" class="text-danger"></span>
-            </div>
+            
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -48,6 +66,8 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+
 }
