--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,7 +6,10 @@
     <title>@ViewData["Title"] - BiodataTest</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
@@ -32,7 +35,21 @@
                         </li>
                     </ul>
                 </div>
+                <div class="col-md-4">
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <h3>Hello @User.Identity.Name</h3>
+                        <a asp-controller="Account" asp-action="Logout" class="btn btn-primary">Logout</a>
+                    }
+                    else
+                    {
+                        <h3>Login here</h3>
+                        <a asp-controller="Account" asp-action="Login" class="btn btn-primary">Login</a>
+                    }
+                </div>
             </div>
+
+
         </nav>
     </header>
     <div class="container">
@@ -40,7 +57,19 @@
             @RenderBody()
         </main>
     </div>
+    @if (User.Identity.IsAuthenticated)
+    {
+        <table class="table table-sm ">
+            @foreach (var claim in User.Claims)
+            {
+                <tr>
+                    <td>@claim.Type</td>
+                    <td>@claim.Value</td>
+                </tr>
+            }
 
+        </table>
+    }
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2021 - BiodataTest - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
