--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -33,6 +33,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Biodata" asp-action="existedBiodata">View Biodata</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Dept" asp-action="CreateDept">Create Dept</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Dept" asp-action="ExistingDept">View Dept</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-md-4">
