--- a/Views/Biodata/CreateBiodata.cshtml
+++ b/Views/Biodata/CreateBiodata.cshtml
@@ -6,9 +6,9 @@
 
 <h1>CreateBiodata</h1>
 <head>
-    <link href="/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
+    <link href="/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <script src="/lib/jquery/jquery.js"></script>
-    <script src="/lib/bootstrap/js/bootstrap.js"></script>
+    <script src="/lib/bootstrap/dist/js/bootstrap.js"></script>
     @*<link href="~/Content/site.css" rel="stylesheet" />*@
 
     @*<script type="text/javascript" src="/lib/jquery/dist/jquery.min.js"></script>
@@ -46,15 +46,47 @@
                 <div class="col-sm-6">
                     <div class="form-group">
                         <label asp-for="DOB" class="control-label"></label>
-                        <input type="date" id="DOB" name="DOB" class="form-control" asp-for="DOB" />
+                        <input id="DOB" name="DOB" class="form-control" asp-for="DOB" />
                         <span asp-validation-for="DOB" class="text-danger"></span>
                     </div>
                 </div>
 
 
             </div>
-            
 
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <label asp-for="LocationId" class="control-label"></label>
+                        <textarea asp-for="LocationId" class="form-control"></textarea>
+                        <span asp-validation-for="LocationId" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <label asp-for="Location" class="control-label"></label>
+                        <input name="Location" class="form-control" asp-for="Location" />
+                        <span asp-validation-for="Location" class="text-danger"></span>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="form-group">
+                <label asp-for="Referer" class="control-label"></label>
+                <select name="RefererId" id="refererId" asp-for="Referer" class="form-control">
+              
+                </select>
+                <span asp-validation-for="Referer" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="DeptId" class="control-label"></label>
+                @*<select name="DeptId" id="deptId" asp-for="Department" class="form-control">*@
+                    <select asp-for="DeptId" id="DeptId" class="form-control" asp-items="@(new SelectList(@ViewBag.listofDept,"DeptId","DepartmentName"))">
+                    @*<option value="">Select Department</option>*@
+                </select>
+                <span asp-validation-for="DeptId" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -66,6 +98,57 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+@*<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>*@
+<script type="text/javascript">
+    $(document).ready(function () {
+        $.ajax({
+            type: "GET",
+            url: "/Biodata/populatereferers",
+            data: "{}",
+            success: function (data) {
+                var s = '<option value="-1">Please Select a Referer</option>';
+
+                //console.log(data);
+                ////for (var i = 0; i < data.length; i++) {
+                ////    alert(data[0].referer);
+                ////    //console.log(data[i].referer);
+                ////    s += '<option value="' + data[i].refererId + '">' + data[i].referer + '</option>';
+                ////}
+                ////$("#refererId").html(s);
+
+                $('#RefererId').find('option').remove()
+                $(data).each(
+                    function (index, item) {
+                        //alert(item.referer);
+
+                        //alert(item.refererId);
+                        $('#refererId').append('<option value="' + item.refererId + '">' + item.referer + '</option>');
+                    }
+                    );
+            }
+        });
+    });
+
+
+    //$(document).ready(function () {
+    //    $.ajax({
+    //        url: "populatereferers",
+    //        type: "GET",
+    //        contentType: "application/json; charset=utf-8",
+    //        datatype: JSON,
+    //        success: function (result) {
+    //            //$(result).each(function () {
+    //            //    $("#Referer").append($("<option></option>").val(this.ID).html(this.FirstName));
+    //            //});
+    //            $(result).each(
+    //                function (index, item) {
+    //                    $('#Id').append('<option value="' + item.id + '">' + item.FirstName + '</option>')
+    //                });
+    //        },
+    //        error: function (data) { }
+    //    });
+    //});
+</script>
 
 @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 
