--- a/Views/Biodata/EditBiodata.cshtml
+++ b/Views/Biodata/EditBiodata.cshtml
@@ -38,6 +38,30 @@
                 <input asp-for="DOB" class="form-control" />
                 <span asp-validation-for="DOB" class="text-danger"></span>
             </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <label asp-for="LocationId" class="control-label"></label>
+                        <textarea asp-for="LocationId" class="form-control"></textarea>
+                        <span asp-validation-for="LocationId" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <label asp-for="Location" class="control-label"></label>
+                        <input name="Location" class="form-control" asp-for="Location" />
+                        <span asp-validation-for="Location" class="text-danger"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label asp-for="DeptId" class="control-label"></label>
+                @*<select name="DeptId" id="deptId" asp-for="Department" class="form-control">*@
+                <select asp-for="DeptId" id="DeptId" class="form-control" asp-items="@(new SelectList(@ViewBag.listofDept2,"DeptId","DepartmentName"))">
+                    @*<option value="">Select Department</option>*@
+                </select>
+                <span asp-validation-for="DeptId" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
