--- a/Views/Biodata/existedBiodata.cshtml
+++ b/Views/Biodata/existedBiodata.cshtml
@@ -55,9 +55,9 @@
                 @Html.DisplayFor(modelItem => item.Department)
             </td>
             <td>
-                <a asp-action="EditBiodata" asp-route-id="@item.Id" class="btn btn-primary">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-primary">Delete</a>
+                <a asp-action="EditBiodata" asp-route-id="@item.StaffId" class="btn btn-primary">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.StaffId" class="btn btn-primary">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.StaffId" class="btn btn-primary">Delete</a>
             </td>
         </tr>
 }
