--- a/Views/Biodata/CreateBiodata.cshtml
+++ b/Views/Biodata/CreateBiodata.cshtml
@@ -34,9 +34,9 @@
 
                         <div class="col-md-4">
                             @*<label asp-for="StaffId" class="col-md-2 col-form-label form-control-label"></label>*@
-                            <label asp-for="StaffId" class="control-label">Staff Id</label>
-                            <input asp-for="StaffId" class="form-control" />
-                            <span asp-validation-for="StaffId" class="text-danger"></span>
+                            <label asp-for="StaffNumber" class="control-label">Staff Number</label>
+                            <input asp-for="StaffNumber" class="form-control" />
+                            <span asp-validation-for="StaffNumber" class="text-danger"></span>
                         </div>
                         <div class="col-md-4">
                             <label asp-for="FirstName" class="control-label">First Name</label>
@@ -70,7 +70,7 @@
                         <div class="col-md-4">
                             <div class="form-group">
                                 <label asp-for="DOB" class="control-label"></label>
-                                <input class="form-control" asp-for="DOB" />
+                                <input  class="form-control" asp-for="DOB" id="DOB" />
                                 <span asp-validation-for="DOB" class="text-danger"></span>
                             </div>
                         </div>
@@ -163,6 +163,14 @@
         });
     });
 
+    //$(function () {
+    //    $('#DOB').datepicker({
+    //        changeMonth: true,
+    //        changeYear: true,
+    //        format: "dd/mm/yyyy",
+    //        language: "tr"
+    //    });
+    //});
 
     //$(document).ready(function () {
     //    $.ajax({
