--- a/Views/Biodata/CreateBiodata.cshtml
+++ b/Views/Biodata/CreateBiodata.cshtml
@@ -15,7 +15,7 @@
         <script type="text/javascript" src="/lib/jquery/dist/jquery.js"></script>*@
 </head>
 
-<form asp-action="CreateBiodata" asp-controller="Biodata" method="post" role="form">
+<form asp-action="CreateBiodata" asp-controller="Biodata" method="post" role="form" enctype="multipart/form-data">
     <div class="card mb-4">
 
         <div class="card-header">
@@ -70,7 +70,7 @@
                         <div class="col-md-4">
                             <div class="form-group">
                                 <label asp-for="DOB" class="control-label"></label>
-                                <input  class="form-control" asp-for="DOB" id="DOB" />
+                                <input class="form-control" asp-for="DOB" id="DOB" />
                                 <span asp-validation-for="DOB" class="text-danger"></span>
                             </div>
                         </div>
@@ -80,21 +80,21 @@
 
 
                     @*<div class="row">
-                            <div class="col-sm-6">
-                                <div class="form-group">
-                                    <label asp-for="LocationId" class="control-label"></label>
-                                    <textarea asp-for="LocationId" class="form-control"></textarea>
-                                    <span asp-validation-for="LocationId" class="text-danger"></span>
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="form-group">
-                                    <label asp-for="Location" class="control-label"></label>
-                                    <input name="Location" class="form-control" asp-for="Location" />
-                                    <span asp-validation-for="Location" class="text-danger"></span>
-                                </div>
-                            </div>
-                        </div>*@
+            <div class="col-sm-6">
+                <div class="form-group">
+                    <label asp-for="LocationId" class="control-label"></label>
+                    <textarea asp-for="LocationId" class="form-control"></textarea>
+                    <span asp-validation-for="LocationId" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="form-group">
+                    <label asp-for="Location" class="control-label"></label>
+                    <input name="Location" class="form-control" asp-for="Location" />
+                    <span asp-validation-for="Location" class="text-danger"></span>
+                </div>
+            </div>
+        </div>*@
 
                     <div class="form-group row">
                         <div class="col-md-4">
@@ -112,7 +112,11 @@
                             <span asp-validation-for="DeptId" class="text-danger"></span>
                         </div>
                     </div>
-
+                    <div class="form-group">
+                        <label asp-for="CVfile" class="control-label"></label>
+                        <input asp-for="CVfile" class="form-control" type="file" />
+                        <span asp-validation-for="CVfile" class="text-danger"></span>
+                    </div>
 
                     <div class="form-group">
                         <input type="submit" value="Create" class="btn btn-primary" />
