--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -220,7 +220,15 @@
                                         <li class="nav-item">
                                             <a asp-controller="Account" asp-action="getAllRoles" class="nav-link">View Roles</a>
                                         </li>
-
+                                        <li class="nav-item">
+                                            <a asp-action="CreateCategory" asp-controller="Category" class="nav-link">Create New Category</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a asp-action="existedCategories" asp-controller="Category" class="nav-link">View Category</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a asp-action="CreateSkills" asp-controller="Skills" class="nav-link">Create Skills</a>
+                                        </li>
                                     </ul>
                                 </div>
                             }
