--- a/Views/Skills/CreateSkills.cshtml
+++ b/Views/Skills/CreateSkills.cshtml
@@ -13,20 +13,24 @@
         <form asp-action="CreateSkills">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="CategoryID" class="control-label"></label>
+                <select asp-for="CategoryID" class="form-control" asp-items="@(new SelectList(@ViewBag.listofCategory,"CategoryID","CategoryName"))">
+                </select>
+
+                <span asp-validation-for="CategoryID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="skillCode" class="control-label"></label>
                 <input asp-for="skillCode" class="form-control" />
                 <span asp-validation-for="skillCode" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="skillDescription" class="control-label"></label>
-                <input asp-for="skillDescription" class="form-control" />
+                <textarea asp-for="skillDescription" class="form-control"></textarea>
+                @*<input asp-for="skillDescription" class="form-control" />*@
                 <span asp-validation-for="skillDescription" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="CategoryID" class="control-label"></label>
-                <input asp-for="CategoryID" class="form-control" asp-items="@(new SelectList(@ViewBag.listofDept,"CategoryID","CategoryName"))" />
-                <span asp-validation-for="CategoryID" class="text-danger"></span>
-            </div>
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
