Application and Career added

--- a/Views/Biodata/existedBiodata.cshtml
+++ b/Views/Biodata/existedBiodata.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<BiodataTest.ViewModels.BioDataViewModel>
 
 @{
-    ViewData["Title"] = "existedBiodata";
+//ViewData["Title"] = "existedBiodata";
 }
 
 <h1>existedBiodata</h1>
