--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -229,6 +229,16 @@
                                         <li class="nav-item">
                                             <a asp-action="CreateSkills" asp-controller="Skills" class="nav-link">Create Skills</a>
                                         </li>
+                                        <li class="nav-item">
+                                            <a asp-action="CreateCareer" asp-controller="Career" class="nav-link">Create Career</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a asp-action="existedCareers" asp-controller="Career" class="nav-link">View Career</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a asp-action="existedApplications" asp-controller="Career" class="nav-link">View Applications</a>
+                                        </li>
+                                        
                                     </ul>
                                 </div>
                             }
