--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
     <link rel="stylesheet" href="~/assets/css/argon.mine209.css?v=1.0.0" type="text/css">
     <link rel="stylesheet" href="~/css/loading.css">
     <link href="~/sweetAlert/sweetalert.css" rel="stylesheet" />
+    <link href="~/css/site.css" rel="stylesheet" />
     <script src="~/sweetAlert/sweetalert.min.js"></script>
 
     <script src="~/lib/jquery/jquery.js"></script>
