--- a/Views/Career/Application.cshtml
+++ b/Views/Career/Application.cshtml
@@ -38,7 +38,7 @@
                         <span asp-validation-for="CategoryName" class="text-danger"></span>
                     </div>
                     <div class="col-md-4">
-                        <label asp-for="skills" class="control-label"></label>
+                        <label class="control-label">Required Skills</label>
                         <textarea asp-for="skills" class="form-control" readonly></textarea>
                         <span asp-validation-for="skills" class="text-danger"></span>
                     </div>
