--- a/Views/Career/existedApplications.cshtml
+++ b/Views/Career/existedApplications.cshtml
@@ -1,109 +1,170 @@
 ﻿@model IEnumerable<BiodataTest.Models.ApplicationDetails>
 
-@{
-    ViewData["Title"] = "existedApplications";
-}
 
-<h1>existedApplications</h1>
+<div class="row">
+    <div class="col-md-12">
+        <form asp-controller="Career" asp-action="existedApplications" method="get">
+            <p>
+                Search With: <input type="text" name="SearchString" id="SearchString" />
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.ApplicationId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CareerID)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CategoryID)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FirstName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LastName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PhoneNumber)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Address)
-            </th>
+                @*Order By: <input type="text" name="sortOrder" id="sortOrder" />*@
+                @*<input type="submit" class="btn btn-danger btn-sm" />*@
+
+                <input type="Submit" class="btn btn-default-alt" />
+            </p>
             
-            <th>
-                @Html.DisplayNameFor(model => model.approved)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.available)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.POprocessing)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.iSActive)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.rejected)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ApplicationId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CareerID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CategoryID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PhoneNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address)
-            </td>
-            
-            <td>
-                @Html.DisplayFor(modelItem => item.approved)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.available)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.POprocessing)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.iSActive)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.rejected)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ApplicationId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ApplicationId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ApplicationId">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+        </form>
+
+    </div>
+    </div>
+
+        
+
+<div class="row">
+    
+    <div>
+        <table class="table-bordered">
+            <thead>
+                <tr class="td">
+                    <th>
+                        @*@Html.DisplayNameFor(model => model.ApplicationId)*@
+                        ID
+                    </th>
+                    <th>
+                        @*@Html.DisplayNameFor(model => model.CareerID)*@
+                        @*@Html.DisplayNameFor(model => model.CareerID)*@
+                        Career 
+                    </th>
+                    <th>
+                        @*@Html.DisplayNameFor(model => model.CategoryID)*@
+                        Category
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.FirstName)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.LastName)
+                    </th>
+
+                    <th>
+                        @Html.DisplayNameFor(model => model.Email)
+                    </th>
+                    <th>
+                        @*@Html.DisplayNameFor(model => model.PhoneNumber)*@
+                        Phone
+                    </th>
+                    <th>
+                        @*@Html.DisplayNameFor(model => model.Address)*@
+                        Address
+                    </th>
+                    <th>
+                        @*@Html.DisplayNameFor(model => model.yearsExpe)*@
+                        Years
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.TransDate)
+                    </th>
+
+
+                    <th>
+                        @Html.DisplayNameFor(model => model.approved)
+                    </th>
+                    @*<th>
+            @Html.DisplayNameFor(model => model.available)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.POprocessing)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.iSActive)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.rejected)
+        </th>*@
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                <tr class="td">
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ApplicationId)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CareerName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CategoryName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.FirstName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LastName)
+                    </td>
+
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Email)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PhoneNumber)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Address)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.yearsExpe)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.TransDate)
+                    </td>
+
+
+                    <td>
+                        @Html.DisplayFor(modelItem => item.approved)
+                    </td>
+                    <td hidden>
+                        @Html.DisplayFor(modelItem => item.CvPath)
+                    </td>
+                    @*<td>
+            @Html.DisplayFor(modelItem => item.available)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.POprocessing)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.iSActive)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.rejected)
+        </td>*@
+                    <td>
+                        <div>
+                            <li class="nav-item">
+                                <a href="@Url.Action("OnGetDownloadCV", "Career", new { Id = item.CvPath })">View CV</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="@Url.Action("ApproveCV", "Career", new { Id = item.ApplicationId})">Approve CV</a>
+                            </li>
+
+                        </div>
+                        <div>
+                            <form asp-action="AddUserCartlog" asp-controller="Biodata" method="post">
+                                <button asp-action="AddUserCartlog" asp-route-id="@item.ApplicationId" onclick="return confirm('Are you sure of adding this to your cartlog?')" class="btn btn-danger btn-sm">Add to Cartlog</button>
+                            </form>
+
+                        </div>
+                        @*<a asp-action="Edit" asp-route-id="@item.ApplicationId">Edit</a> |
+            <a asp-action="Details" asp-route-id="@item.ApplicationId">Details</a> |
+            <a asp-action="Delete" asp-route-id="@item.ApplicationId">Delete</a>*@
+                    </td>
+                </tr>
+                }
+            </tbody>
+        </table>
+
+    </div>
+       
+    </div>
+
