--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -23,11 +23,46 @@ body {
     width: 100%;
 }
 
+.card-columns .card-body {
+    height: 100px;
+    font-family: 'Nunito',sans-serif;
+    background: #fbfafd;
+}
+
+.card-columns .card-img {
+    height: 300px;
+    vertical-align: bottom;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: .8;
+}
+
+.modal .card-img {
+    height: 500px;
+    vertical-align: bottom;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    /*opacity: .8;*/
+}
+.card-columns .card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 10px 20px rgba(37,33,82,.12), 0 4px 8px rgba(37,33,82,.06);
+}
 /* QR code generator */
 #qrCode {
     margin: 15px;
 }
-
+.th, .td {
+    font-size: 12px;
+}
+.table-condensed {
+    font-size:9px;
+}
+.table-bordered {
+    font-size: 9px;
+}
 /* Hide/rearrange for smaller screens */
 @media screen and (max-width: 767px) {
     /* Hide captions */
