--- a/Views/Career/existedApplications.cshtml
+++ b/Views/Career/existedApplications.cshtml
@@ -1,31 +1,100 @@
 ﻿@model IEnumerable<BiodataTest.Models.ApplicationDetails>
+@*@inject IHttpContextAccessor HttpContextAccessor*@
 
+<head>
+    <script type="text/javascript">
+        $(function () {
 
-<div class="row">
+            $('#txtStartDate').datetimepicker();
+            /*alert("Am ok");*/
+            @*$('#categoryid').change(function () {
+
+                var Categoryid = $("#categoryid").val();
+
+               /* alert(Categoryid);*/
+                if (Categoryid != "") {
+                    $.ajax({
+                        /*url: "Career/FilterApplications",*/
+                        url: '@Url.Action("FilterApplications", "Career")',
+                        data: { id: Categoryid },
+                        type: "GET",
+                        success: function (response)
+                        {
+                            /*$('#dataTables-example').html("").html(response);*/
+                        }
+                        //error: function () {
+                        //    alert("Error");
+                        //alert("error : " + reponse);
+                        //}
+                    });
+                }
+            });*@
+
+           
+        });
+    </script>
+</head>
+
+<<!--div class="row">
     <div class="col-md-12">
         <form asp-controller="Career" asp-action="existedApplications" method="get">
             <p>
-                Search With: <input type="text" name="SearchString" id="SearchString" />
+                Search With: <input type="text" name="SearchString" id="SearchString" />-->
 
                 @*Order By: <input type="text" name="sortOrder" id="sortOrder" />*@
                 @*<input type="submit" class="btn btn-danger btn-sm" />*@
 
-                <input type="Submit" class="btn btn-default-alt" />
+                <!--<input type="Submit" value="Search" class="btn btn-default-alt" />
             </p>
-            
+
         </form>
 
     </div>
+</div>-->
+
+<div class="panel panel-default">
+    <div class="panel-body">
+        <form asp-controller="Career" asp-action="FilterApplications" method="post" enctype="multipart/form-data">
+            <p>
+                <div class="form-group">
+                    <label class="control-label">Search with Career Category</label>
+                    <select id="categoryid" class="form-control" name="categoryid" asp-items="@(new SelectList(@ViewBag.listofCategory,"CategoryID","CategoryName"))">
+                        @*<option>Select Career Category</option>
+                <option>All Category</option>*@
+                    </select>
+                    @*<span asp-validation-for="CategoryID" class="text-danger"></span>*@
+                </div>
+                
+                    <div class="form-group">
+                        <label class="control-label">Start Date</label>
+                        <input type="datetime" id="txtStartDate" name="StartDate" />
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">End Date</label>
+                        <input type="datetime" id="txtEndDate" name="EndDate" />
+                    </div>
+
+                    <div class="form-group">
+                        <input type="submit" value="Search" class="btn btn-primary" />
+                    </div>
+            </p>
+
+
+
+        </form>
+
+
+
+
     </div>
+</div>
 
-        
+<div class="panel panel-default">
 
-<div class="row">
-    
     <div>
-        <table class="table-bordered">
-            <thead>
-                <tr class="td">
+        <table class="table">
+            <thead class="th">
+                <tr>
                     <th>
                         @*@Html.DisplayNameFor(model => model.ApplicationId)*@
                         ID
@@ -33,7 +102,7 @@
                     <th>
                         @*@Html.DisplayNameFor(model => model.CareerID)*@
                         @*@Html.DisplayNameFor(model => model.CareerID)*@
-                        Career 
+                        Career
                     </th>
                     <th>
                         @*@Html.DisplayNameFor(model => model.CategoryID)*@
@@ -46,14 +115,14 @@
                         @Html.DisplayNameFor(model => model.LastName)
                     </th>
 
-                    <th>
+                    <th hidden>
                         @Html.DisplayNameFor(model => model.Email)
                     </th>
-                    <th>
+                    <th hidden>
                         @*@Html.DisplayNameFor(model => model.PhoneNumber)*@
                         Phone
                     </th>
-                    <th>
+                    <th hidden>
                         @*@Html.DisplayNameFor(model => model.Address)*@
                         Address
                     </th>
@@ -66,105 +135,133 @@
                     </th>
 
 
-                    <th>
+                    <th hidden>
                         @Html.DisplayNameFor(model => model.approved)
                     </th>
                     @*<th>
-            @Html.DisplayNameFor(model => model.available)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.POprocessing)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.iSActive)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.rejected)
-        </th>*@
+                            @Html.DisplayNameFor(model => model.available)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.POprocessing)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.iSActive)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.rejected)
+                        </th>*@
+
+                    <th>
+                        Actions
+                    </th>
                     <th></th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="td">
                 @foreach (var item in Model)
                 {
-                <tr class="td">
-                    <td>
-                        @Html.DisplayFor(modelItem => item.ApplicationId)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.CareerName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.CategoryName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.FirstName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.LastName)
-                    </td>
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ApplicationId)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CareerName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CategoryName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.FirstName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.LastName)
+                        </td>
 
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Email)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.PhoneNumber)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Address)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.yearsExpe)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.TransDate)
-                    </td>
+                        <td hidden>
+                            @Html.DisplayFor(modelItem => item.Email)
+                        </td>
+                        <td hidden>
+                            @Html.DisplayFor(modelItem => item.PhoneNumber)
+                        </td>
+                        <td hidden>
+                            @Html.DisplayFor(modelItem => item.Address)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.yearsExpe)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.TransDate)
+                        </td>
 
 
-                    <td>
-                        @Html.DisplayFor(modelItem => item.approved)
-                    </td>
-                    <td hidden>
-                        @Html.DisplayFor(modelItem => item.CvPath)
-                    </td>
-                    @*<td>
-            @Html.DisplayFor(modelItem => item.available)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.POprocessing)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.iSActive)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.rejected)
-        </td>*@
-                    <td>
-                        <div>
-                            <li class="nav-item">
-                                <a href="@Url.Action("OnGetDownloadCV", "Career", new { Id = item.CvPath })">View CV</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="@Url.Action("ApproveCV", "Career", new { Id = item.ApplicationId})">Approve CV</a>
-                            </li>
+                        <td hidden>
+                            @Html.DisplayFor(modelItem => item.approved)
+                        </td>
+                        <td hidden>
+                            @Html.DisplayFor(modelItem => item.CvPath)
+                        </td>
+                        @*<td>
+                                @Html.DisplayFor(modelItem => item.available)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.POprocessing)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.iSActive)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.rejected)
+                            </td>*@
+                        <td>
+                            @if (User.IsInRole("Admin"))
+                            {
+                                <div>
+                                    <li class="nav-item">
+                                        <a href="@Url.Action("ViewDetails", "Career", new { Id = item.ApplicationId})">View Details</a>
+                                    </li>
 
-                        </div>
-                        <div>
-                            <form asp-action="AddUserCartlog" asp-controller="Biodata" method="post">
-                                <button asp-action="AddUserCartlog" asp-route-id="@item.ApplicationId" onclick="return confirm('Are you sure of adding this to your cartlog?')" class="btn btn-danger btn-sm">Add to Cartlog</button>
-                            </form>
+                                    <li class="nav-item">
+                                        <a href="@Url.Action("OnGetDownloadCV", "Career", new { Id = item.CvPath })">View CV</a>
+                                    </li>
 
-                        </div>
-                        @*<a asp-action="Edit" asp-route-id="@item.ApplicationId">Edit</a> |
-            <a asp-action="Details" asp-route-id="@item.ApplicationId">Details</a> |
-            <a asp-action="Delete" asp-route-id="@item.ApplicationId">Delete</a>*@
-                    </td>
-                </tr>
+                                    <li class="nav-item">
+                                        <a href="@Url.Action("ApproveCV", "Career", new { Id = item.ApplicationId})">Approve</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="@Url.Action("RejectCV", "Career", new { Id = item.ApplicationId})">Reject</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="@Url.Action("AddUserCartlog", "Career", new { Id = item.ApplicationId})" onclick="return confirm('Are you sure of adding this to your cartlog?')">Add to Cartlog</a>
+                                    </li>
+
+                                </div>
+                            }
+                            @if (User.IsInRole("Employer"))
+                            {
+                                <div>
+
+                                    <li class="nav-item">
+                                        <a href="@Url.Action("AddUserCartlog", "Career", new { Id = item.ApplicationId})" onclick="return confirm('Are you sure of adding this to your cartlog?')">Add to Cartlog</a>
+                                    </li>
+
+                                </div>
+                            }
+
+                        </td>
+                        @*<td>
+                                <div>
+                                    <form asp-action="AddUserCartlog" asp-controller="Career" method="post">
+                                        <button asp-action="AddUserCartlog" asp-route-id="@item.ApplicationId" onclick="return confirm('Are you sure of adding this to your cartlog?')" class="nav-link-text">Add to Cartlog</button>
+                                    </form>
+
+                                </div>
+                            </td>*@
+                    </tr>
                 }
             </tbody>
         </table>
 
     </div>
-       
-    </div>
+
+</div>
 
