--- a/Views/Career/existedApplications.cshtml
+++ b/Views/Career/existedApplications.cshtml
@@ -60,7 +60,7 @@
 <div class="panel-body">
     <form asp-controller="Career" asp-action="existedApplications" method="get" enctype="multipart/form-data">
 
-        <div class="container">
+        
             <div class="panel panel-primary">
                 <div class="panel-heading">Filter Section</div>
                 <div class="panel-body">
@@ -101,13 +101,13 @@
                     <input type="submit" value="Search" class="btn btn-primary" />
                 </div>
             </div>
-        </div>
+       
     </form>
 </div>
 </div>
 
 
-<div class="container">
+@*<div class="container-fluid">*@
     <div class="panel panel-success">
         <div class="panel-heading"></div>
         <div class="panel-body">
@@ -284,4 +284,4 @@
             </div>
         </div>
     </div>
-</div>
+@*</div>*@
