--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -238,7 +238,9 @@
                                         <li class="nav-item">
                                             <a asp-action="existedApplications" asp-controller="Career" class="nav-link">View Applications</a>
                                         </li>
-                                        
+                                        <li class="nav-item">
+                                            <a asp-controller="YearsExperienceCost" asp-action="CreateCost" class="nav-link">Setup Cost</a>
+                                        </li>
                                     </ul>
                                 </div>
                             }
