--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -5,17 +5,17 @@
   
 
 <hr />
-<div class="row">
-    <div class="col-md-8">
+<div class="panel panel-default">
+<div class="panel-body" style="width:35%">
         <form asp-action="Login" asp-controller="Account" method="post">
 
-            <div class="container col-md-8">
+            @*<div class="container col-md-8">*@
                 <div class="panel panel-primary">
-                    <div class="panel-heading"></div>
+                    <div class="panel-heading">Login</div>
                     <div class="panel-body">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="row">
-                            <div class="col-md-8">
+                            <div class="col-md-10">
                                 <div class="form-group">
                                     <label asp-for="Email" class="control-label"></label>
                                     <input type="email" asp-for="Email" class="form-control" />
@@ -25,7 +25,7 @@
                         </div>
 
                         <div class="row">
-                            <div class="col-md-8">
+                            <div class="col-md-10">
                                 <div class="form-group">
                                     <label asp-for="password" class="control-label"></label>
                                     <input type="password" asp-for="password" class="form-control" />
@@ -35,7 +35,7 @@
                         </div>
 
                         <div class="row">
-                            <div class="col-md-8">
+                            <div class="col-md-10">
                                 <div class="form-group">
                                     <div class="checkbox">
                                         <label asp-for="RememberMe">
@@ -46,10 +46,19 @@
                                 </div>
                             </div>
                         </div>
-                        <input type="submit" value="Login" class="btn btn-primary" />
+
+                       
+
+                        <div class="row">
+                            <div class="col-md-10">
+                                <input type="submit" value="Login" class="btn btn-primary" />
+                            </div>
+                        </div>
+
+
                     </div>
                 </div>
-            </div>
+            @*</div>*@
             @*<div class="form-group">
                
             </div>*@
