added cost exper

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -230,6 +230,9 @@
                                             <a asp-action="CreateSkills" asp-controller="Skills" class="nav-link">Create Skills</a>
                                         </li>
                                         <li class="nav-item">
+                                            <a asp-action="ExistingSkill" asp-controller="Skills" class="nav-link">View Skills</a>
+                                        </li>
+                                        <li class="nav-item">
                                             <a asp-action="CreateCareer" asp-controller="Career" class="nav-link">Create Career</a>
                                         </li>
                                         <li class="nav-item">
