--- a/Views/Skills/CreateSkills.cshtml
+++ b/Views/Skills/CreateSkills.cshtml
@@ -1,39 +1,118 @@
 ﻿@model BiodataTest.Models.Skills
 
-@{
-    ViewData["Title"] = "CreateSkills";
-}
+<head>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            FliterCareers();
 
-<h1>CreateSkills</h1>
 
-<h4>Skills</h4>
+            $('#categoryID').change(function () {
+                FliterCareers();
+
+            });
+
+        });
+
+
+
+        var FliterCareers = function () {
+
+             var _categoryidVal = $("#categoryID").val();//get value at category dropdown and b=not text
+
+               /* alert(Categoryid);*/
+                if (_categoryidVal != "") {
+                    $.ajax({
+                        /*url: "Career/FilterApplications",*/
+                        url: '@Url.Action("FilterCategoryCareer", "YearsExperienceCost")',
+                        data: { id: _categoryidVal },
+                        type: "GET",
+                        success: function (response)
+                        {
+                            //load carrer dropdown with the respose
+                            $('#careerID').find('option').remove()
+                            $(response).each(
+                                function (index, item) {
+                                    $('#careerID').append('<option value="' + item.careerID + '">' + item.careerName + '</option>')
+                                });
+                        }
+                        //error: function () {
+                        //    alert("Error");
+                        //alert("error : " + reponse);
+                        //}
+                    });
+                }
+        }
+
+
+
+
+
+    </script>
+</head>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="panel panel-default">
+    <div class="panel-body">
         <form asp-action="CreateSkills">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="CategoryID" class="control-label"></label>
-                <select asp-for="CategoryID" class="form-control" asp-items="@(new SelectList(@ViewBag.listofCategory,"CategoryID","CategoryName"))">
-                </select>
+            <div class="panel panel-primary">
+                <div class="panel-heading">Schedule an Appointment</div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-md-4">
 
-                <span asp-validation-for="CategoryID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="skillCode" class="control-label"></label>
-                <input asp-for="skillCode" class="form-control" />
-                <span asp-validation-for="skillCode" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="skillDescription" class="control-label"></label>
-                <textarea asp-for="skillDescription" class="form-control"></textarea>
-                @*<input asp-for="skillDescription" class="form-control" />*@
-                <span asp-validation-for="skillDescription" class="text-danger"></span>
+                            <div class="form-group">
+                                <label class="control-label">Category</label>
+                                <select id="categoryID" name="CategoryID" class="form-control" asp-items="@(new SelectList(@ViewBag.listofCategory,"CategoryID","CategoryName"))">
+                                </select>
+
+                                <span asp-validation-for="CategoryID" class="text-danger"></span>
+                            </div>
+
+                        </div>
+                        <div class="col-md-4">
+
+                            <div class="form-group">
+                                <label class="control-label">Career</label>
+                                <select name="careerID" id="careerID" class="form-control" asp-items="@(new SelectList(@ViewBag.Career,"CareerID","CareerName"))">
+                                    @*<option value="">Select Department</option>*@
+                                </select>
+
+                                <span asp-validation-for="CareerID" class="text-danger"></span>
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <div class="row">
+
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label asp-for="skillCode" class="control-label"></label>
+                                <input asp-for="skillCode" class="form-control" />
+                                <span asp-validation-for="skillCode" class="text-danger"></span>
+                            </div>
+                        </div>
+
+
+                        <div class="col-md-4">
+
+                            <div class="form-group">
+                                <label asp-for="skillDescription" class="control-label"></label>
+                                <textarea asp-for="skillDescription" class="form-control"></textarea>
+                                @*<input asp-for="skillDescription" class="form-control" />*@
+                                <span asp-validation-for="skillDescription" class="text-danger"></span>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <input type="submit" value="Create" class="btn btn-primary" />
+                    </div>
+
+                </div>
             </div>
 
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
         </form>
     </div>
 </div>
